better processing of SRS

--- a/php/test/injector/Mocks/Model/Client/wiki/R1.html
+++ b/php/test/injector/Mocks/Model/Client/wiki/R1.html
@@ -1,3 +1,7 @@
-<h1>R1 - requirement about functionality</h1>
+<h1>{ActorUser} functionality for invoices and account control</h1>
 
-<p><a href="http://trac.fazend.com/test/wiki/R1.1">R1.1</a>: ActorUser can open account</p>
+    <p>{R1.1}: When in control panel, {ActorUser} enters changes to {UserAccount},
+        {SUD} writes changes to database, {ActorUser} receives email with confirmation.</p>
+        
+    <p>{R1.2}: When viewing {UserInvoice}, {ActorUser} enters changes to {UserInvoice},
+        {SUD} writes changes to database.</p>        
