traceability from tickets introduced

--- a/php/test/Mocks/Shared/wiki/SRS.html
+++ b/php/test/Mocks/Shared/wiki/SRS.html
@@ -8,7 +8,7 @@
 
 <h1>Interfaces</h1>
 
-    <p>{IfWeb}: HTTP interface between {ActorUser} and {SUD}.</p>
+    <p>{IfWeb}: HTTP interface between {ActorUser} and {SUD} mostly used by {R1}, {UC1} and {R3}.</p>
 
 <h1>Use Cases</h1>
 
