tests and fixes

--- a/php/test/Mocks/Shared/wiki/opp-BestOffer.html
+++ b/php/test/Mocks/Shared/wiki/opp-BestOffer.html
@@ -1,7 +1,13 @@
-<h1>Vision</h1>
+<h1>Contacts</h1>
 
     <p>name: John Doe</p>
+    <p>company: ACME Co.</p>
     <p>address: 11th Avenue, 123</p>
+    <p>country: USA</p>
+    <p>city: New York</p>
+    <p>phone: 212 555 8709</p>
+
+<h1>Vision</h1>
 
     <p>
     Statement: There is a marketing opportunity to benefit from 
