fixes in opportunity management - now it should work

--- a/php/test/Mocks/Shared/wiki/opp-BestOffer.html
+++ b/php/test/Mocks/Shared/wiki/opp-BestOffer.html
@@ -2,6 +2,9 @@
 
     <p>price: 18 USD</p>
     <p>deposit: 30%</p>
+    <p>low: 750</p>
+    <p>high: 750</p>
+    <p>weeks: 12</p>
 
 <h1>Contacts</h1>
 
