--- a/php/test/Mocks/Shared/wiki/opp-BestOffer.html
+++ b/php/test/Mocks/Shared/wiki/opp-BestOffer.html
@@ -1,3 +1,87 @@
+        <h1 id="Offer">Offer</h1>
+<p>
+price: 20 EUR
+</p>
+<p>
+deposit: 20%
+</p>
+<p>
+low: 650
+</p>
+<p>
+high: 1100
+</p>
+<p>
+weeks: 10
+</p>
+<h1 id="Contacts">Contacts</h1>
+<p>
+Name: Mian M Ahmad
+</p>
+<p>
+Position: Founder, Chairman
+</p>
+<p>
+Company: RIGHT2CALL Holdings Limited
+</p>
+<p>
+Address: 608, Keader Centre, 129-149 On Lok Road
+</p>
+<p>
+City: Yuen Long
+</p>
+<p>
+Country: Hong Kong
+</p>
+<p>
+Phone: +852 3692 5501 x100
+</p>
+<p>
+Fax: +852 3692 5503
+</p>
+<p>
+Mobile: +852 6335 8500
+</p>
+<p>
+Msn: <a class="mail-link" href="mailto:mian@right2call.com"><span class="icon"> </span>mian@right2call.com</a>
+</p>
+<p>
+Skype: right2call
+</p>
+<h1 id="Vision">Vision</h1>
+<p>
+Statement: There is a marketing opportunity to benefit from automated management of VOIP traffic sent by telecommunication companies (Telco's) and received by premium content providers, by means of their IVR's.
+</p>
+<p>
+Product: We're developing an automated dispatcher of premium VOIP traffic between IVRs and Telcos. There are a number of premium telephone numbers registered worldwide in different Telcos, while every minute of call to such numbers cost callers certain amount of money, larger than normal price of normal telephone call. The call is received by Telco and then forwarded to Router system (using SIP protocol), hosted on our servers. The Router receives the call and forwards it to one of the IVR's, according to the pre-configured routing rules. The IVR process the call, delivers pre-recorded or live voice content and finishes the call. We receive regular payments from Telco's, deduct our commission and distribute payments among our customers (owners of IVRs).
+</p>
+<p>
+Actors:
+</p>
+<ul><li>Telco: Telecommunication company, doesn't communicate with the System directly
+</li><li>IVR: Interactive Voice Response software/hardware, doesn't communicate with the System directly
+</li><li>Router: SIP/H.323 traffic router, probably a combination of Asterix and FreeRadius, or SER and MySQL, or some other combination of software components (to be determined during architecture/design phase). More detailed analysis of the Router configuration will be done later, according to the specific quality/performance requirements of the system.
+<ul><li>F1: System can configure routing rules in the Router according to the parameters set by Providers and Managers; can retrieve call statistics from the Router in CDR format or maybe some other format;
+</li></ul></li><li>Provider: provider of digital content by means of pre-configured and connected to us IVR
+<ul><li>F2: Provider can register new IVR; can configure IVR's parameters; can view reports of the IVR, including problems, defects, and log messages
+</li><li>F3: Provider can book a new phone number; can view a list of available phone numbers; can request certain country country if it's not available in the list yet; can stop using certain phone number;
+</li><li>F4: Provider can view statistics of calls received ordered/filtered by date, IVR, phone number, country, revenue per number
+</li><li>F5: Provider can view his balance; can list payments received and sent; can send request for money withdrawal; can review full report of payments made filtered/ordered by date, amount, account.
+</li></ul></li><li>Manager: the owner of the System, responsible for the management of money and traffic
+<ul><li>F6: Manager can view summary finance reports by phone number, by provider, by Telco, by country, by IVR, by Router results; can add/remove phone numbers in the database; can suspend/activate clients, IVR's, phone numbers, even the Router.
+</li></ul></li></ul><h1 id="Promo">Promo</h1>
+<p>
+Pages:
+</p>
+<ul><li>Company Info
+</li><li>Finance Info
+</li><li>Project Model
+</li><li>Technical Capacity
+</li><li>Quality Policy
+</li></ul>
+        
+
+<!--
 <h1>Offer</h1>
 
     <p>price: 18 USD</p>
@@ -94,3 +178,4 @@
 <h1 id="ScheduleEstimate">Schedule Estimate</h1>
 <p>
 </p>
+-->
