--- a/php/test/Mocks/Shared/wiki/UserAccount.html
+++ b/php/test/Mocks/Shared/wiki/UserAccount.html
@@ -1,3 +1,7 @@
+<!-- 
+ * @version $Id$
+ -->
+        
 <h1>User Account</h1>
 
     <p>{UserAccount}: Information about particular {ActorUser}, that includes:</p>
