--- a/php/test/Mocks/Shared/wiki/R1.2.html
+++ b/php/test/Mocks/Shared/wiki/R1.2.html
@@ -1,3 +1,7 @@
+<!-- 
+ * @version $Id$
+ -->
+        
 <h1>{ActorUser} makes changes to {UserInvoice}-s</h1>
 
     <p>{R1.2.a}: {ActorUser} enters changes in web form, {SUD} saves changes.</p>
