--- a/php/test/Mocks/Shared/wiki/R1.html
+++ b/php/test/Mocks/Shared/wiki/R1.html
@@ -1,3 +1,7 @@
+<!-- 
+ * @version $Id$
+ -->
+        
 <h1>{ActorUser} functionality for invoices and account control</h1>
 
     <p>{R1.1}: When in control panel, {ActorUser} enters changes to {UserAccount},
