started to implement ScheduleEstimate - not finished yet

--- a/php/test/Mocks/Shared/wiki/opp-BestOffer.html
+++ b/php/test/Mocks/Shared/wiki/opp-BestOffer.html
@@ -179,11 +179,43 @@
         <li>We may fail to find enough information about third-party system</li>
         <li>There is a risk of schedule slippage</li>
     </ul>    
-    
-<h1 id="ScheduleEstimate">Schedule Estimate</h1>
-<p>
-</p>
 -->
+    
+<h1 id="ScheduleEstimate">ScheduleEstimate</h1>
+
+    <p>Works:</p>
+    <ul>
+        <li>Inception:
+            <ul>
+                <li>cost: deposit</li>
+                <li>duration: 10%</li>
+            </ul>
+        </li>
+        <li>Elaboration:
+            <ul>
+                <li>cost: 10%</li>
+                <li>duration: 15%</li>
+            </ul>
+        </li>
+        <li>First:
+            <ul>
+                <li>cost: 30%</li>
+                <li>duration: 20%</li>
+            </ul>
+        </li>
+        <li>Second:
+            <ul>
+                <li>cost: 20%</li>
+                <li>duration: 35%</li>
+            </ul>
+        </li>
+        <li>Third:
+            <ul>
+                <li>cost: 20%</li>
+                <li>duration: 20%</li>
+            </ul>
+        </li>
+    </ul>
 
 <h1>SAO</h1>
 
