schedule estimate almost finished

--- a/php/test/Mocks/Shared/wiki/opp-BestOffer.html
+++ b/php/test/Mocks/Shared/wiki/opp-BestOffer.html
@@ -185,34 +185,43 @@
 
     <p>Works:</p>
     <ul>
-        <li>Inception:
+        <li>Inception: Scope is analyzed, SRS document is developed and reviewed with 
+            peer reviewers and the customer, server deployment organized, preliminary
+            graphic layout is developed
             <ul>
                 <li>cost: deposit</li>
                 <li>duration: 10%</li>
             </ul>
         </li>
-        <li>Elaboration:
+        <li>Elaboration: First workable prototype is designed and developed, functionality
+            reviewed and SRS document altered where necessary, development team is 
+            organized and detailed project planning finished
             <ul>
                 <li>cost: 10%</li>
                 <li>duration: 15%</li>
             </ul>
         </li>
-        <li>First:
+        <li>First Release: Workable system is developed and deployed to the production
+            server, major functionality defects resolved, system started to work in
+            real-life market conditions, first end-users are involved, 2 betting
+            sites and 1 sport
             <ul>
-                <li>cost: 30%</li>
+                <li>cost: 4500 USD</li>
                 <li>duration: 20%</li>
             </ul>
         </li>
-        <li>Second:
+        <li>Market Launch: System starts trading</li>
+        <li>Second Release: System works with 10 betting sites and 5 sports
             <ul>
                 <li>cost: 20%</li>
-                <li>duration: 35%</li>
+                <li>duration: 30%</li>
             </ul>
         </li>
-        <li>Third:
+        <li>Third Release: System works with 40 sites, 5 accounts on each and all
+            sports available
             <ul>
-                <li>cost: 20%</li>
-                <li>duration: 20%</li>
+                <li>cost: 35%</li>
+                <li>duration: 25%</li>
             </ul>
         </li>
     </ul>
