schedule estimate is done

--- a/php/test/Mocks/Shared/wiki/opp-BestOffer.html
+++ b/php/test/Mocks/Shared/wiki/opp-BestOffer.html
@@ -84,6 +84,9 @@
                     receive said data and parse them before processing, the system
                     can understand betting lines, store them in the database
                     and prepare for analysis.</li>
+                <li>F4: "40 sites" Bettor can be one of 40 betting sites,
+                    with 5 accounts for each. The system can manage accounts
+                    of these sites, and fully automate the entire betting process.</li>
             </ul>
         </li>
         <li>Manager: Representative of ATG controlling the system results
@@ -127,11 +130,13 @@
                 <li>method: three points</li>
                 <li>F1: ML=60, BC=40, WC=160</li>
                 <li>F2: ML=60, BC=40, WC=120</li>
-                <li>F2: ML=40, BC=30, WC=80</li>
+                <li>F3: ML=40, BC=30, WC=80</li>
+                <li>F4: ML=200, BC=160, WC=600</li>
                 <li>I think that the biggest risk for us is in integration with XML feeds... 
                     they might change protocols in time and we should somehow adapt our
                     software to such changes... also we should pay attention to the database
-                    design..</li>
+                    design.. 40 sites sounds rather risky and might take more time than
+                    expected..</li>
             </ul>
         </li>
         <li>Daniel Bargiel: lead PHP programmer and designer, 8+ years
@@ -141,15 +146,19 @@
                 <li>method: function points</li>
                 <li>F1: FP=3, C=7</li>
                 <li>F2: FP=2, C=4</li>
-                <li>F2: FP=2, C=5</li>
+                <li>F3: FP=2, C=5</li>
+                <li>F4: FP=14, C=2</li>
                 <li>This project is interesting, but very risky because we will
                     deal with rather "closed" processes, nobody will help us in the market,
                     we will not be able to get technical help from bettors for example. I 
-                    would pay extreme attention to performance and reliability.</li>
+                    would pay extreme attention to performance and reliability.
+                    40 sites looks like a big chunk of work, and might take more
+                    time than expected.</li>
             </ul>
         </li>
     </ul>
    
+<!--
 <h1 id="References">References</h1>
     
     <p>Accounts:</p>
@@ -158,7 +167,7 @@
         <li>Avivo:</li>
         <li>Xasax:</li>
     </ul>
-
+-->
 
 <h1>Promo</h1>
     
@@ -206,7 +215,7 @@
             real-life market conditions, first end-users are involved, 2 betting
             sites and 1 sport
             <ul>
-                <li>cost: 4500 USD</li>
+                <li>cost: 20%</li>
                 <li>duration: 20%</li>
             </ul>
         </li>
@@ -214,14 +223,14 @@
         <li>Second Release: System works with 10 betting sites and 5 sports
             <ul>
                 <li>cost: 20%</li>
-                <li>duration: 30%</li>
+                <li>duration: 20%</li>
             </ul>
         </li>
         <li>Third Release: System works with 40 sites, 5 accounts on each and all
             sports available
             <ul>
-                <li>cost: 35%</li>
-                <li>duration: 25%</li>
+                <li>cost: 20%</li>
+                <li>duration: 20%</li>
             </ul>
         </li>
     </ul>
