--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@ layout: static
 title: "Page Not Found"
 description:
   The page you're looking for is not found. Perhaps your
-  link is expired. Try to check my home page at yegor256.com
+  link is expired. Try to check my home page at technoparkcorp.com
 keywords:
   - java
   - programming
@@ -16,6 +16,14 @@ keywords:
 exclude_from_search: true
 ---
 
-<p>You've reached my blog. Probably the link
-you're using is expired. Try to start from
-<a href="/">home</a>.</p>
+The page you are looking for does not exist in our site.
+Maybe the URL you are using is obsolete.
+Review the list of most popular topics on our site below and click onto one of them:
+
+ * Project [rough order of magnitude]() estimation method;
+ * [Software requirements specification]({% href process/scope/srs %}) is a core document in software project;
+ *  <li><a href="${url:about/why}">Why</a> customers work with TechnoPark Corp and stay with us;</li>
+ * Review [the list of open positions]({% href about/jobs %}) in our team.
+</ul>
+
+[Contact us]({% href contacts %}) if you are going to order software development.
