--- a/404.html
+++ b/404.html
@@ -22,7 +22,7 @@ Review the list of most popular topics on our site below and click onto one of t
 
  * Project [rough order of magnitude]() estimation method;
  * [Software requirements specification]({% href process/scope/srs %}) is a core document in software project;
- *  <li><a href="${url:about/why}">Why</a> customers work with TechnoPark Corp and stay with us;</li>
+ *  <li>[Why]({% href about/why %}) customers work with TechnoPark Corp and stay with us;</li>
  * Review [the list of open positions]({% href about/jobs %}) in our team.
 </ul>
 
