--- a/404.html
+++ b/404.html
@@ -1,6 +1,9 @@
 ---
-layout: static
+layout: article
 title: "Page Not Found"
+label: Page Not Found
+intro: "Page not found"
+next: process/cost
 description:
   The page you're looking for is not found. Perhaps your
   link is expired. Try to check my home page at technoparkcorp.com
